Added fix for chat

--- a/src/test/tarento.html
+++ b/src/test/tarento.html
@@ -7,7 +7,6 @@ $(document).ready(function(){
    alert("Loading Tarento web");
 });
 </script>
-
 </head>
 <body>
 <div style="background-color:lightblue">
@@ -25,7 +24,7 @@ Tarento Website
   window.botpressWebChat.init({
   host: 'http://localhost:4000',
   botName: 'Aadhaar Bot', // Name of your bot
-  botAvatarUrl: 'https://avatars3.githubusercontent.com/u/1315508?v=4&s=400', // Default avatar URL of the image (e.g., 'https://avatars3.githubusercontent.com/u/1315508?v=4&s=400' )
+  //botAvatarUrl: 'https://avatars3.githubusercontent.com/u/1315508?v=4&s=400', // Default avatar URL of the image (e.g., 'https://avatars3.githubusercontent.com/u/1315508?v=4&s=400' )
   botConvoTitle: 'Aadhaar Bot', // Title of the first conversation with the bot
   botConvoDescription: '',
   backgroundColor: '#ffffff', // Color of the background
@@ -36,13 +35,5 @@ Tarento Website
   enableTranscriptDownload: false // Whether or not to show the transcript download button
 })
 </script>
-
-<style>
-.-botpress-channel-web__style__external___1BNU9 .-botpress-channel-web__style__internal___2QK5K {
-  height: 50% !important;
-  border-top: 1px solid #ccc;
-}
-</style>
-
 <!--  <iframe width="1536" height="864" src="https://www.youtube.com/embed/7_bEq4AQ4sw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 </html>
